src/test/ui/inference/inference_unstable_forced.stderr
error[E0658]: use of unstable library feature 'ipu_flatten' (see issue #99999)
  --> $DIR/inference_unstable_forced.rs:21:20
   |
LL |     assert_eq!('x'.ipu_flatten(), 0);   //~ ERROR E0658
   |                    ^^^^^^^^^^^
   |
   = help: add #![feature(ipu_flatten)] to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
